adjust infer workaround

--- a/.inferconfig
+++ b/.inferconfig
@@ -2,6 +2,6 @@
   "compilation-database": ["./build/compile_commands.json"],
   "fail-on-issue": true,
   "results-dir": "./build/infer-out",
-  "disable-issue-type": [ "NULL_DEREFERENCE" ],
+  "disable-issue-type": [ "NULLPTR_DEREFERENCE" ],
   "liveness": false
 }
