fix clang-tidy on github CI, build pb headers

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -47,8 +47,9 @@ jobs:
     - name: Configure
       run: >
         cmake --preset default
-        -DCMAKE_COMPILE_WARNING_AS_ERROR=ON
-        -DCMAKE_EXPORT_COMPILE_COMMANDS=1
+          -DCMAKE_COMPILE_WARNING_AS_ERROR=ON
+          -DCMAKE_EXPORT_COMPILE_COMMANDS=1 &&
+        cmake --build --preset default --parallel
     - name: Run clang-format and clang-tidy, including clang-analyzer checks
       id: lint
       uses: cpp-linter/cpp-linter-action@v2
