cosmetic: YAML name adjustment

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -44,7 +44,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: ./.github/actions/make-homebrew-devenv
-    - name: Configure
+    - name: Configure and build
       run: >
         cmake --preset default
         -DCMAKE_COMPILE_WARNING_AS_ERROR=ON
