--- a/.inferconfig
+++ b/.inferconfig
@@ -3,5 +3,6 @@
   "fail-on-issue": true,
   "results-dir": "./build/infer-out",
   "skip-analysis-in-path": [ "build/_deps/" ],
+  "disable-issue-type": [ "NULLPTR_DEREFERENCE" ],
   "liveness": false
 }
