--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ target_include_directories(youtube PRIVATE ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries(youtube PRIVATE my_cflags)
 
 add_subdirectory(lib)
+add_subdirectory(protocol)
 add_subdirectory(sandbox)
 add_subdirectory(sys)
 
@@ -14,7 +15,12 @@ target_sources(youtube PRIVATE
 	youtube.c
 )
 
-if (CMAKE_BUILD_TYPE STREQUAL Debug)
-	message(STATUS "Enabling runtime debug output")
-	target_compile_definitions(youtube PRIVATE WITH_DEBUG_OUTPUT)
-endif (CMAKE_BUILD_TYPE STREQUAL Debug)
+option(WITH_DEBUG_LOG "Enable runtime debug logging" OFF)
+if (WITH_DEBUG_LOG)
+	target_compile_definitions(youtube PRIVATE WITH_DEBUG_LOG)
+endif (WITH_DEBUG_LOG)
+
+option(WITH_CURL_VERBOSE "Enable verbose libcurl logging" OFF)
+if (WITH_CURL_VERBOSE)
+	target_compile_definitions(youtube PRIVATE WITH_CURL_VERBOSE)
+endif (WITH_CURL_VERBOSE)
