enable more clang-tidy checks
... and fix resulting warnings. Some highlights:

- refactor mutable global state like SEATBELT_CONTEXT, identified by
  `cppcoreguidelines-avoid-non-const-global-variables`
  - as an added bonus, this clang-tidy check can replace the
    heuristic-based check-global-variables.sh script and CI job
- switch to static_assert() where possible, per `misc-static-assert`
- fix `readability-inconsistent-declaration-parameter-name` warnings

Also, reduce the size of the VM generated by qemu-build.exp in order to
unblock the code coverage CI job. It turns out clang and llvm need not
be installed inside the coverage VM; foregoing these packages makes the
resulting VM image ~300MB smaller, which allows us to fit within
GitLab's 1GB CI asset limit.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,6 +36,7 @@ macro(generate_test_driver)
 		test_driver.c
 		${TEST_SOURCES}
 	)
+	set_source_files_properties(test_driver.c PROPERTIES SKIP_LINTING ON)
 	add_executable(test-driver
 		${generated_sources}
 		test_suites.c
