refactor sandbox_verify() to avoid using assert()
Convert sandbox_verify() to return a result_t struct to indicate success
or failure, matching the general idiom for fallible functions in this
project. Forgoing assertions for conditions that can genuinely fail on
runtime sandbox malfunction avoids unceremoniously crashing on debug
builds and spuriously proceeding on release builds (where assertions are
typically disabled by default).

Other related improvements:

- improve debug logs for happy-path sandbox_verify() execution
- split sandbox_verify() into a dedicated *.c file
- simplify the header includes of the primary sandbox.c implementation
- avoid memory leaks on potential sandbox_ok() test failure

--- a/src/sandbox/CMakeLists.txt
+++ b/src/sandbox/CMakeLists.txt
@@ -3,3 +3,7 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 	add_subdirectory(darwin)
 endif ()
+
+target_sources(youtube PRIVATE
+	verify.c
+)
