--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -15,7 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, macos-13]
+        # macos-15 is arm64 (aarch64), macos-15-large is amd64 (x86_64)
+        os: [ubuntu-latest, macos-15, macos-15-large]
         toolchain:
           - compiler: gcc
             package: gcc@14
