--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -19,7 +19,7 @@ jobs:
         os: [ubuntu-latest, macos-15, macos-15-large]
         toolchain:
           - compiler: gcc
-            package: gcc@14
+            package: gcc-14
             # gcc-14 (currently) required to workaround failures on gcc-15:
             #
             #     {standard input}: Assembler messages:
