use 1.1.1.1 for network sandbox testing
Instead of using the current IP address of example.com when testing
socket() and connect(), use Cloudflare's DNS server at 1.1.1.1. This
should make us somewhat less likely to hit recurrences of 6d43477, where
the IP of example.com changed and required updates to sandbox_verify().

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -40,6 +40,7 @@ macro(generate_test_driver)
 	add_executable(test-driver
 		${generated_sources}
 		test_suites.c
+		test_network.c
 		coverage.c
 	)
 	target_include_directories(test-driver PRIVATE
