--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -18,7 +18,7 @@ jobs:
         # macos-15 is arm64 (aarch64), macos-15-large is amd64 (x86_64)
         os: [ubuntu-latest, macos-15, macos-15-large]
         toolchain:
-          - compiler: gcc
+          - compiler: gcc-14
             package: gcc@14
             # gcc-14 (currently) required to workaround failures on gcc-15:
             #
