--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, macos-13]
         toolchain:
-          - compiler: gcc
+          - compiler: gcc-14
             package: gcc@14
             # gcc-14 (currently) required to workaround failures on gcc-15:
             #
