--- a/src/sandbox/linux/CMakeLists.txt
+++ b/src/sandbox/linux/CMakeLists.txt
@@ -2,6 +2,5 @@ target_sources(youtube PRIVATE
 	landlock.c
 	seccomp.c
 )
-target_link_libraries(youtube PRIVATE
-	seccomp
-)
+
+target_link_from_pkg_config(youtube libseccomp)
