--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -4,10 +4,23 @@ target_sources(youtube PRIVATE
 	url.c
 )
 
+pkg_check_modules(ADA REQUIRED ada)
+pkg_check_modules(CURL REQUIRED libcurl)
+pkg_check_modules(DUKTAPE REQUIRED duktape)
+pkg_check_modules(JANSSON REQUIRED jansson)
+pkg_check_modules(PCRE2 REQUIRED libpcre2-8)
+
+target_include_directories(youtube PRIVATE
+	${ADA_INCLUDE_DIRS}
+	${CURL_INCLUDE_DIRS}
+	${DUKTAPE_INCLUDE_DIRS}
+	${JANSSON_INCLUDE_DIRS}
+	${PCRE2_INCLUDE_DIRS}
+)
 target_link_libraries(youtube PRIVATE
-	ada
-	curl
-	duktape
-	jansson
-	pcre2-8
+	${ADA_LIBRARIES}
+	${CURL_LIBRARIES}
+	${DUKTAPE_LIBRARIES}
+	${JANSSON_LIBRARIES}
+	${PCRE2_LIBRARIES}
 )
