--- a/src/sandbox/linux/CMakeLists.txt
+++ b/src/sandbox/linux/CMakeLists.txt
@@ -2,6 +2,12 @@ target_sources(youtube PRIVATE
 	landlock.c
 	seccomp.c
 )
+
+pkg_check_modules(SECCOMP REQUIRED libseccomp)
+
+target_include_directories(youtube PRIVATE
+	${SECCOMP_INCLUDE_DIRS}
+)
 target_link_libraries(youtube PRIVATE
-	seccomp
+	${SECCOMP_LIBRARIES}
 )
