--- a/src/sandbox/linux/CMakeLists.txt
+++ b/src/sandbox/linux/CMakeLists.txt
@@ -5,7 +5,7 @@ target_sources(youtube PRIVATE
 
 pkg_check_modules(SECCOMP REQUIRED libseccomp)
 
-target_include_directories(youtube PRIVATE
+target_include_directories(youtube SYSTEM PRIVATE
 	${SECCOMP_INCLUDE_DIRS}
 )
 target_link_libraries(youtube PRIVATE
