--- a/src/protocol/CMakeLists.txt
+++ b/src/protocol/CMakeLists.txt
@@ -42,6 +42,8 @@ pkg_check_modules(PROTOBUF REQUIRED libprotobuf-c)
 target_include_directories(youtube-protocol PRIVATE
 	${PROJECT_SOURCE_DIR}/include
 	${PROJECT_SOURCE_DIR}/src
+)
+target_include_directories(youtube-protocol SYSTEM PRIVATE
 	${googlevideo_BINARY_DIR}
 	${PROTOBUF_INCLUDE_DIRS}
 )
