restore libresolv link

--- a/src/protocol/CMakeLists.txt
+++ b/src/protocol/CMakeLists.txt
@@ -50,3 +50,8 @@ target_include_directories(youtube-protocol SYSTEM PRIVATE
 target_link_libraries(youtube-protocol PRIVATE
 	${PROTOBUF_LIBRARIES}
 )
+if (NOT CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
+	target_link_libraries(youtube-protocol PRIVATE
+		resolv # for b64_pton()
+	)
+endif (NOT CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
