--- a/src/sandbox/linux/CMakeLists.txt
+++ b/src/sandbox/linux/CMakeLists.txt
@@ -8,7 +8,7 @@ pkg_check_modules(SECCOMP REQUIRED libseccomp)
 target_include_directories(youtube SYSTEM PRIVATE
 	${SECCOMP_INCLUDE_DIRS}
 )
-target_link_directories(youtube PRIVATE
+target_link_directories(youtube PUBLIC
 	${SECCOMP_LIBRARY_DIRS}
 )
 target_link_libraries(youtube PRIVATE
