test specifying absolute paths to libraries and omitting any changes to link_dirs

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -17,17 +17,10 @@ target_include_directories(youtube SYSTEM PRIVATE
 	${JANSSON_INCLUDE_DIRS}
 	${PCRE2_INCLUDE_DIRS}
 )
-target_link_directories(youtube PUBLIC
-	${ADA_LIBRARY_DIRS}
-	${CURL_LIBRARY_DIRS}
-	${DUKTAPE_LIBRARY_DIRS}
-	${JANSSON_LIBRARY_DIRS}
-	${PCRE2_LIBRARY_DIRS}
-)
 target_link_libraries(youtube PRIVATE
-	${ADA_LIBRARIES}
-	${CURL_LIBRARIES}
-	${DUKTAPE_LIBRARIES}
-	${JANSSON_LIBRARIES}
-	${PCRE2_LIBRARIES}
+	${ADA_LINK_LIBRARIES}
+	${CURL_LINK_LIBRARIES}
+	${DUKTAPE_LINK_LIBRARIES}
+	${JANSSON_LINK_LIBRARIES}
+	${PCRE2_LINK_LIBRARIES}
 )
