--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,8 +46,11 @@ macro(generate_test_driver)
 	target_include_directories(test-driver PRIVATE
 		${CMAKE_CURRENT_SOURCE_DIR} # for coverage.h, test_macros.h, etc
 		${PROJECT_SOURCE_DIR}/src   # for debug.h, tmpfile.h, etc
+	)
+	target_include_directories(test-driver SYSTEM PRIVATE
 		${greatest_SOURCE_DIR}      # for greatest.h
 		${googlevideo_BINARY_DIR}   # for generated protobuf code
+		${PROTOBUF_INCLUDE_DIRS}    # for protobuf-c.h
 	)
 	target_link_libraries(test-driver PRIVATE my_cflags sanitizers youtube)
 endmacro()
