--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,9 +50,13 @@ macro(generate_test_driver)
 	target_include_directories(test-driver SYSTEM PRIVATE
 		${greatest_SOURCE_DIR}      # for greatest.h
 		${googlevideo_BINARY_DIR}   # for generated protobuf code
-		${PROTOBUF_INCLUDE_DIRS}    # for protobuf-c.h
 	)
-	target_link_libraries(test-driver PRIVATE my_cflags sanitizers youtube)
+	target_link_libraries(test-driver PRIVATE
+		my_cflags
+		sanitizers
+		youtube
+		youtube-protobuf
+	)
 endmacro()
 
 register_test(js)
