--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,13 +73,47 @@ target_include_directories(youtube-unthrottle SYSTEM PRIVATE
 )
 
 # Allow both implementation and tests to use protobuf-c APIs.
-add_library(youtube-protobuf INTERFACE)
-target_include_directories(youtube-protobuf SYSTEM INTERFACE
+add_library(youtube-protobuf)
+target_include_directories(youtube-protobuf PUBLIC
 	${PROTOBUF_INCLUDE_DIRS}
+	${googlevideo_BINARY_DIR}
 )
-target_link_libraries(youtube-protobuf INTERFACE
+target_link_libraries(youtube-protobuf PRIVATE
 	${PROTOBUF_LINK_LIBRARIES}
 )
+
+set(PROTO_PREFIX "${googlevideo_SOURCE_DIR}/protos")
+file(GLOB PROTOS RELATIVE "${PROTO_PREFIX}"
+	"${PROTO_PREFIX}/misc/*.proto"
+	"${PROTO_PREFIX}/video_streaming/*.proto"
+)
+list(FILTER PROTOS EXCLUDE REGEX "onesie_.*\.proto")
+
+set(PROTO_FULLPATH ${PROTOS})
+list(TRANSFORM PROTO_FULLPATH PREPEND "${PROTO_PREFIX}/")
+
+set(PROTO_C ${PROTOS})
+list(TRANSFORM PROTO_C REPLACE ".proto" ".pb-c.c")
+list(TRANSFORM PROTO_C PREPEND "${googlevideo_BINARY_DIR}/")
+
+add_custom_command(
+	OUTPUT
+		${PROTO_C}
+	COMMAND
+		protoc
+		--proto_path=${PROTO_PREFIX}
+		--c_out=${googlevideo_BINARY_DIR}
+		${PROTO_FULLPATH}
+	DEPENDS
+		${PROTO_FULLPATH}
+)
+set_source_files_properties(${PROTO_C} PROPERTIES SKIP_LINTING ON)
+
+target_sources(youtube-protobuf PRIVATE
+	${PROTO_C}
+)
+
+target_link_libraries(youtube PRIVATE youtube-protobuf)
 
 #
 # Figure out which options the compiler supports, and enable them.
