--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,12 +50,7 @@ macro(generate_test_driver)
 	target_include_directories(test-driver SYSTEM PRIVATE
 		${greatest_SOURCE_DIR}      # for greatest.h
 	)
-	target_link_libraries(test-driver PRIVATE
-		my_cflags
-		sanitizers
-		youtube
-		youtube-protobuf
-	)
+	target_link_libraries(test-driver PRIVATE my_cflags sanitizers youtube)
 endmacro()
 
 register_test(js)
